made the add button in new place form  work properly, fixed the pagination to have correct spacing across all pages

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -41,11 +41,15 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: flex-start;
 }
 
-.pagination .previous_page {
+.pagination em {
     margin: 0 20px 0 0;
 }
 
 .pagination a {
-    margin: 0 10px 0 10px;
+    margin: 0 20px 0 0;
+}
+
+.pagination span {
+    margin: 0 20px 0 0;
 }
 
